# MyLearning-React-CodeSubmit

./: README.md
toubib-api/: Dockerfile  Makefile  pyproject.toml
toubib-api/tests/: conftest.py
toubib-api/tests/integration/: conftest.py  test_create_patient.py  test_delete_doctors.py  test_delete_patient.py  test_get_doctor.py  test_get_patient.py  test_list_patients.py
toubib-api/tests/unittests/: test_sqla_getPatient.py  test_sqla_patient.py
toubib-api/toubib/: main.py  sqla.py
toubib-api/toubib/db/: env.py
toubib-api/toubib/db/versions/: 002_add_patient_table.py  003_add_fake_patients.py
toubib-webapp/: index.html  package-lock.json  package.json  tsconfig.json
toubib-webapp/src/: index.css  index.tsx
toubib-webapp/src/api/: toubib.test.ts  toubib.ts
toubib-webapp/src/app/: App.css  App.tsx
toubib-webapp/src/app/components/Pagination/: Pagination.css  Pagination.tsx
toubib-webapp/src/app/components/PatientCard/: index.css  index.tsx
toubib-webapp/src/app/components/PatientPage/: index.css  index.tsx
