[tool.poetry]
name = "toubib"
version = "0.1.0"
description = "Simple EMR"
authors = ["Hackers <hackers@dialogue.co>"]

[tool.poetry.dependencies]
python = "^3.12.0"
fastapi = "^0.109.2"
fastapi-sqla = "^3.1.1"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
hypercorn = "^0.16.0"
structlog = "^24.1.0"
email-validator = "^2.1.0.post1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest = "^8.0.1"
pytest-asyncio = "^0.23.5"
httpx = "^0.26.0"
asgi-lifespan = "^2.1.0"
faker = "^23.2.1"
pdbpp = "^0.10.3"
ruff = "^0.2.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.1.13"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
exclude = [".vscode", ".eggs", "venv"]
